--- a/woodCutting.html
+++ b/woodCutting.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wood Cutting</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="woodCuttingStyle.css" rel="stylesheet">
     <style>
         .hidden {
             display:none;
